--- a/index.html
+++ b/index.html
@@ -17,6 +17,22 @@
         box-sizing: border-box;
         font-family: "Parkinsans", sans-serif;
     }
+
+    body {
+        background: white;
+    }
+
+    input {
+        appearance: none;
+        border: none;
+        border-bottom: 1px solid black;
+        background: transparent;
+        padding: 0.4rem 0.6rem;
+        border-radius: 0.25rem 0.25rem 0 0;
+    }
+    input:hover {
+        background: #fafafa;
+    }
 </style>
 
 <!-- leptos injects here -->
