--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title> balance ⚖️  </title>
     <link data-trunk rel="copy-dir" href="assets" />
+    <link data-trunk rel="rust" data-bin="main" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap');
 
