--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 --fg: black;
                 --bg2: #fafafa;
             }
+            img.invert {
+                filter: invert(100%);
+            }
         }
 
         body {
