--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> balance ⚖️  </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link data-trunk rel="copy-dir" href="assets" />
     <link data-trunk rel="rust" data-bin="main" />
     <style>
