make bg2 more clear

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         :root {
             --bg: black;
             --fg: white;
-            --bg2: #111;
+            --bg2: #333;
         }
         @media (prefers-color-scheme: light) {
             :root {
                 --bg: white;
                 --fg: black;
-                --bg2: #fafafa;
+                --bg2: #ddd;
             }
             img.invert {
                 filter: invert(100%);
