--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             position: relative;
             background: var(--bg);
         }
+        .search-container p,
         .search-container button {
             display: none;
         }
@@ -96,6 +97,7 @@
         .search-container:focus-within input {
             border-bottom: none;
         }
+        .search-container:focus-within p,
         .search-container:focus-within button {
             display: grid;
         }
