--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             border-radius: 0.5rem;
             cursor: pointer;
             text-align: left;
+            display: grid;
         }
         button:hover {
             background: var(--bg2);
