--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
         .search-container:focus-within button {
             display: grid;
         }
+
+        .hover-line:hover {
+            background: unset;
+            text-decoration: underline;
+        }
     </style>
 </head>
 
