--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
         .search-container:has(button) input {
             border-bottom: none;
         }
+        .search-options {
+            display: grid;
+            max-height: 12.9rem;
+            overflow: scroll;
+        }
 
         .hover-line:hover {
             background: unset;
